--- a/.github/workflows/Update-Status.yml
+++ b/.github/workflows/Update-Status.yml
@@ -22,4 +22,4 @@ jobs:
           SHOW_PROFILE_VIEWS: "False"
           SHOW_TIMEZONE: "False"
           SHOW_UPDATED_DATE: "False"
-          
+          SHOW_PROJECTS: "False"   
