--- a/.github/workflows/Update-Status.yml
+++ b/.github/workflows/Update-Status.yml
@@ -23,4 +23,4 @@ jobs:
           SHOW_TIMEZONE: "False"
           SHOW_UPDATED_DATE: "False"
           SHOW_PROJECTS: "False"
-          DEBUG_LOGGING: "False"
+          SYMBOL_VERSION: "2"
